--- a/HelpDesk/Views/Shared/DetailPengajuanDana.cshtml
+++ b/HelpDesk/Views/Shared/DetailPengajuanDana.cshtml
@@ -258,6 +258,7 @@
                 <p>Dana Pengajuan<span class="required">*</span></p>
                 <input type="text" name="DanaPengajuan" value="@data.DanaPengajuan" required />
             </div>
+            <a href="~/Views/Shared/DetailPengajuanDana.cshtml">~/Views/Shared/DetailPengajuanDana.cshtml</a>
             <div class="item">
                 <p>Dana Persetujuan<span class="required">*</span></p>
                 <input type="text" name="DanaPersetujuan" value="@data.DanaPersetujuan" required />
