--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>HELP DESK KALBE</title>
+    <title>SiPeNa</title>
     <!-- Custom fonts for this template-->
     <link href="~/Assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -81,78 +81,89 @@
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Tambah Proker</span>
             </a>
-        </li>
- }@*<li class="nav-item active">
-        <a class="nav-link" href="https://localhost:44306/Form/SearchTicket">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Search Ticket</span>
-        </a>
-    </li>*@ @*@if (Role == "1") //User
-                    {
-    <li class="nav-item active">
-        <a class="nav-link" href="https://localhost:44306/Form/AllTicketUser?nama=@pic">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Daftar Pengajuan Dana LK</span>
+        </li> }@*<li class="nav-item active">
+                    <a class="nav-link" href="https://localhost:44306/Form/SearchTicket">
+                        <i class="fas fa-fw fa-tachometer-alt"></i>
+                        <span>Search Ticket</span>
+                    </a>
+                </li> @if (Role == "1") //User
+                                {
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://localhost:44306/Form/AllTicketUser?nama=@pic">
+                        <i class="fas fa-fw fa-tachometer-alt"></i>
+                        <span>Daftar Pengajuan Dana LK</span>
 
-        </a>
-    </li>}*@
+                    </a>
+                </li>}*@
+
             @if (Role == "2" || Role == "3") //staff
-                        {
-                    <li class="nav-item active">
-                        <a class="nav-link" href="https://localhost:44306/Form/DaftarProkerLK?pic=@pic">
-                            <i class="fas fa-fw fa-tachometer-alt"></i>
-                            <span>Daftar Program Kerja</span>
-                        </a>
-                    </li>
-                        if (Role == "2") //staff
-                        {
-
-                    <li class="nav-item active">
-                        <a class="nav-link" href="https://localhost:44306/Form/DaftarVerifikasi">
-                            <i class="fas fa-fw fa-tachometer-alt"></i>
-                            <span>Verifikasi Program Kerja </span>
-                        </a>
-                    </li>
-                        }
-
-                    <li class="nav-item active">
-                        <a class="nav-link" href="https://localhost:44306/Form/GetDataLPJLK?pic=@pic">
-                            <i class="fas fa-fw fa-tachometer-alt"></i>
-                            <span>Pengumpulan LPJ </span>
-                        </a>
-                    </li>}
-        @if (Role == "1") //Admin
-        {
+            {
         <li class="nav-item active">
-            <a class="nav-link" href="https://localhost:44306/Form/AllPengajuanDana">
+            <a class="nav-link" href="https://localhost:44306/Form/DaftarProkerLK?pic=@pic">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Pengajuan Dana</span>
+                <span>Daftar Program Kerja</span>
             </a>
         </li>
 
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="https://localhost:44306/Form/AllPengajuanDana">
-                                        <i class="fas fa-fw fa-tachometer-alt"></i>
-                                        <span>Pertanggung Jawaban</span>
-                                    </a>
-                                </li>
-                                                        <li class="nav-item active">
-                                                            <a class="nav-link" href="https://localhost:44306/User/ManageStaffAccount">
-                                                                <i class="fas fa-fw fa-tachometer-alt"></i>
-                                                                <span>Kelola Akun LK</span>
-                                                            </a>
-                                                        </li>
-                                                                                <li class="nav-item active">
-                                                                                    <a class="nav-link" href="https://localhost:44306/Form/OpenExportReport">
-                                                                                        <i class="fas fa-fw fa-tachometer-alt"></i>
-                                                                                        <span>Export Report</span>
-                                                                                    </a>
-                                                                                </li>}
-        <hr class="sidebar-divider d-none d-md-block"> <!-- Sidebar Toggler (Sidebar) -->
-        <div class="text-center d-none d-md-inline">
-            <button class="rounded-circle border-0" id="sidebarToggle"></button>
-        </div> <!-- Sidebar Message -->
-        </ul>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="https://localhost:44306/Form/GetDataLPJLK?pic=@pic">
+                                <i class="fas fa-fw fa-tachometer-alt"></i>
+                                <span>Pengumpulan LPJ </span>
+                            </a>
+                        </li> if (Role == "2") //staff
+                {
+
+
+                        <li class="nav-item active">
+                            <a class="nav-link" href="https://localhost:44306/Form/DaftarVerifikasiPengajuan">
+                                <i class="fas fa-fw fa-tachometer-alt"></i>
+                                <span>Verifikasi Pengajuan Dana </span>
+                            </a>
+                        </li>
+
+
+                                            <li class="nav-item active">
+                                                <a class="nav-link" href="https://localhost:44306/Form/DaftarVerifikasiLPJ">
+                                                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                                                    <span>Verifikasi Laporan Pertanggung Jawaban </span>
+                                                </a>
+                                            </li> }
+            }
+                                                            @if (Role == "1") //Admin
+                                                            {
+                                            <li class="nav-item active">
+                                                <a class="nav-link" href="https://localhost:44306/Form/AllPengajuanDana">
+                                                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                                                    <span>Pengajuan Dana</span>
+                                                </a>
+                                            </li>
+
+                                                                <li class="nav-item active">
+                                                                    <a class="nav-link" href="https://localhost:44306/Form/AllLPJ">
+                                                                        <i class="fas fa-fw fa-tachometer-alt"></i>
+                                                                        <span>Pertanggung Jawaban</span>
+                                                                    </a>
+                                                                </li>
+                                                                                    <li class="nav-item active">
+                                                                                        <a class="nav-link" href="https://localhost:44306/User/ManageStaffAccount">
+                                                                                            <i class="fas fa-fw fa-tachometer-alt"></i>
+                                                                                            <span>Kelola Akun LK</span>
+                                                                                        </a>
+                                                                                    </li>
+                                                                                                        @*<li class="nav-item active">
+                                                                                                            <a class="nav-link" href="https://localhost:44306/Form/OpenExportReport">
+                                                                                                                <i class="fas fa-fw fa-tachometer-alt"></i>
+                                                                                                                <span>Export Report</span>
+                                                                                                            </a>
+                                                                                                        </li>*@
+}
+                                                                            <hr class="sidebar-divider d-none d-md-block">
+ <!-- Sidebar Toggler (Sidebar) -->
+                                                                                            <div class="text-center d-none d-md-inline">
+                                                                                                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+                                                                                            </div>
+ <!-- Sidebar Message -->
+                                                                                                        </ul>
         <!-- End of Sidebar -->
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
@@ -218,7 +229,9 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>HELP DESK KALBE</span>
+                        <span>Sistem Informasi Pengumpulan P3DK dan LPJ</span>
+                        <br>
+                        <span>Organisasi Kemahasiswaan Universitas Kristen Duta Wacana</span>
                     </div>
                 </div>
             </footer>
