--- a/HelpDesk/Assets/css/sb-admin-2.css
+++ b/HelpDesk/Assets/css/sb-admin-2.css
@@ -9902,9 +9902,9 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
-  background-size: cover;
+    background-color: #F08080;
+  /*  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);*/
+    background-size: cover;
 }
 
 .bg-gradient-secondary {
