--- a/HelpDesk/Views/Shared/FormComplaint.cshtml
+++ b/HelpDesk/Views/Shared/FormComplaint.cshtml
@@ -47,6 +47,7 @@
 
 <html>
 <head>
+   
     <style>
         * {
             box-sizing: border-box;
@@ -103,28 +104,6 @@
             display: table;
             clear: both;
         }
-        input[type="date"]::-webkit-inner-spin-button {
-            display: none;
-        }
-
-        .item i, input[type="date"]::-webkit-calendar-picker-indicator {
-            position: absolute;
-            font-size: 20px;
-            color: #a9a9a9;
-        }
-
-        .item i {
-            right: 2%;
-            top: 30px;
-            z-index: 1;
-        }
-
-        [type="date"]::-webkit-calendar-picker-indicator {
-            right: 1%;
-            z-index: 2;
-            opacity: 0;
-            cursor: pointer;
-        }
         /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 
     </style>
@@ -174,7 +153,7 @@
 
             <div class="row">
                 <div class="col-25">
-                    <label for="lname">Tanggal Akhit Pelaksanaan</label>
+                    <label for="lname">Tanggal Akhir Pelaksanaan</label>
                 </div>
                 <div class="col-75">
                     <input type="date" name="TanggalAkhir" required />
