--- a/HelpDesk/Views/Shared/FormPengajuan.cshtml
+++ b/HelpDesk/Views/Shared/FormPengajuan.cshtml
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div class="text-center">
-        <h2 style="font-size:30px;"><b>Tambah Program Kerja</b></h2>
+        <h2 style="font-size:30px;"><b>Form Pengajuan Dana</b></h2>
     </div>
     <div class="container">
         <form name="form1" action="/Form/InsertDataPengajuanDana" method="post" enctype="multipart/form-data">
