--- a/HelpDesk/Views/Shared/register.cshtml
+++ b/HelpDesk/Views/Shared/register.cshtml
@@ -27,7 +27,7 @@
                         <!-- Nested Row within Card Body -->
                         <div class="p-5">
                             <div class="text-center">
-                                <div class="sidebar-brand-text mx-3"> <img src="~/Assets/img/LogoHelpdesk.png" width="150" height="60"></div>
+                                <div class="sidebar-brand-text mx-3"> <img src="~/Assets/img/LogoSipena.png" width="300" height="200"></div>
                                 <br>
                                 <h1 class="h4 text-gray-900 mb-4"><b>Create an Account!</b></h1>
                             </div>
