--- a/HelpDesk/Views/Shared/FormComplaint.cshtml
+++ b/HelpDesk/Views/Shared/FormComplaint.cshtml
@@ -162,12 +162,77 @@
 
             <div class="row">
                 <div class="col-25">
-                    <label for="lname">Dana Pengajuan</label>
+                    <label for="lname">Dana Pengajuan Keseluruhan</label>
                 </div>
                 <div class="col-75">
                     <input id="two" type="text" id="Email" name="DanaPengajuan" required>
                 </div>
             </div>
+            @*==========================================================================================================================================*@
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Dana Administrasi</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="Administrasi" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Dana Akomodasi</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="Akomodasi" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Dana Trasnportasi</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="Trasnportasi" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Dana Konsumsi</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="Konsumsi" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Dana Pembicara</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="Pembicara" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Dana Hadiah</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="Hadiah" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Dana Souvernir</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="Souvernir" required>
+                </div>
+            </div>
+            @*==========================================================================================================================================*@
 
             <div class="row">
                 <div class="col-25">
@@ -215,6 +280,16 @@
                     </select>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-25">
+                    <label for="lname">Target Jumlah Peserta</label>
+                </div>
+                <div class="col-75">
+                    <input id="two" type="text" id="Email" name="TargetJumlah" required>
+                </div>
+            </div>
+
 
 
             @*<div class="row">
